# verificare

./: DomainAbstraction.hs  README.md
Haskell/: LTS.hs  Main.hs  VMLToPromela.hs  ex.vml  ex1.da  ex3.da  example.html  example.vml  out.html  quick.sh  release.sh  verificare.cabal
Haskell/Language/: AbstractSyntax.hs  Parse.hs  Report.hs  vml.hs  vml.html  vml.p
Haskell/Language/DA/: AbstractSyntax.hs  Parse.hs  Report.hs  da.html  da.p
Haskell/Language/Promela/: AbstractSyntax.hs  Parse.hs  Report.hs  promela.html  promela.p
Haskell/Language/VML/: AbstractSyntax.hs  Parse.hs  Report.hs  vml.html  vml.p
Haskell/Language/VML-DA/: AbstractSyntax.hs
Haskell/Verificare/: DAToPromela.hs  VMLToPromela.hs
Haskell/verificare/Language/VML/: AbstractSyntax.hi
promela-examples/: brp.prm
promela-examples/Datatypes/: datatypes.pml
promela-examples/cnm/: combinedChan.pml  controlChan.pml  dataChan.pml  endingChan.pml
promela-examples/garp-a/: garp  pan.b  pan.c  pan.h  pan.m  pan.oin  pan.out  pan.t
promela-examples/garp-b/: garp1.trail  garp_nl  pan.b  pan.c  pan.h  pan.m  pan.oin  pan.out  pan.t  v0.ps  v1.ps
promela-examples/randomized-leader-election/: B1.ItaiRoundLeqK.promela  B2.1.ItaiRoundModK.promela  B2.2.ItaiRoundModKRestrictedProgressLabels.promela  B2.3.ItaiRoundModKMessageOverwritingProcessBufferProc.promela  B3.FokkinkRoundtrip.promela  B4.FokkinkNoRoundtrip.promela  B5.SortingNPrim.promela  B6.1.Timing.promela  B6.2.TimingTestingNode.promela
promela-examples/sip/: basicread.pml  fiforead.pml  transread.pml
verificare/: Main.hs  example.vml
(+14 files in other folders)
